--- a/src/layouts/simulation.css
+++ b/src/layouts/simulation.css
@@ -1,34 +1,40 @@
-	div.tooltip {
-		position: absolute;
-		background-color: white;
-		max-width: 200px;
-		height: auto;
-		padding: 1px;
-		border-style: solid;
-		border-radius: 4px;
-		border-width: 1px;
-		box-shadow: 3px 3px 10px rgba(0, 0, 0, .5);
-		pointer-events: none;
-	}
+div.tooltip {
+  position: absolute;
+  background-color: white;
+  max-width: 200px;
+  height: auto;
+  padding: 1px;
+  border-style: solid;
+  border-radius: 4px;
+  border-width: 1px;
+  box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.5);
+  pointer-events: none;
+}
 
-	div.tooltip article {
-		display: grid;
-		height: 100%;
-		justify-items: center;
-	}
+div.tooltip article {
+  display: grid;
+  height: 100%;
+  justify-items: center;
+}
 
-	div.tooltip h6 {
-		font-size: 16px;
-	}
+div.tooltip h6 {
+  font-size: 16px;
+}
 
-	div.tooltip p[desc] {
-		font-size: 14px;
-		font-weight: 100;
-	}
+div.tooltip p[desc] {
+  font-size: 14px;
+  font-weight: 100;
+}
 
-	div.tooltip p[tools] {
-		display: grid;
-		font-size: 12px;
-		font-weight: 100;
-		align-self: bottom;
-	}
+div.tooltip p[caption] {
+  font-size: 14px;
+  font-style: italic;
+  font-weight: 100;
+}
+
+div.tooltip p[tools] {
+  display: grid;
+  font-size: 12px;
+  font-weight: 100;
+  align-self: bottom;
+}
