--- a/src/layouts/simulation.css
+++ b/src/layouts/simulation.css
@@ -39,6 +39,10 @@ div.tooltip p[tools] {
   align-self: bottom;
 }
 
+.projectCircle {
+  stroke: rgba(0, 0, 0, 0.9);
+}
+
 .link {
   stroke: whitesmoke;
   stroke-width: 1.5px;
