--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -669,6 +669,6 @@ div[role="tooltip"] {
 @media (max-width: 540px) {
   div[role="tooltip"] {
     max-width: 170px;
-    margin-left: 8px;
+    /* margin-left: 8px; */
   }
 }
