--- a/src/layouts/animations.css
+++ b/src/layouts/animations.css
@@ -6,6 +6,7 @@
     transform: scale(1) translateY(0);
   }
 }
+
 @keyframes transitionDown {
   0% {
     transform: scale(0.9) translateY(-60px);
@@ -48,5 +49,35 @@
   }
   to {
     border-right-color: transparent;
+  }
+}
+
+@keyframes swooshInLeft {
+  0% {
+    transform: translateX(20px);
+    opacity: 0;
+  }
+  30% {
+    transform: translateX(10px);
+    opacity: 0.5;
+  }
+  100% {
+    transform: translateX(0px);
+    opacity: 1;
+  }
+}
+
+@keyframes swooshOutLeft {
+  0% {
+    transform: translateX(0px);
+    opacity: 1;
+  }
+  30% {
+    transform: translateX(10px);
+    opacity: 0.5;
+  }
+  100% {
+    transform: translateX(20px);
+    opacity: 0;
   }
 }
