--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -672,3 +672,37 @@ div[role="tooltip"] {
     /* margin-left: 8px; */
   }
 }
+
+/* scrollbar */
+
+body::-webkit-scrollbar {
+  width: 0.5em;
+}
+
+body::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: darkgrey;
+  outline: 1px solid slategrey;
+}
+
+.listRoot::-webkit-scrollbar {
+  width: 0.5em;
+}
+
+.listRoot::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #F5F5F5;
+}
+
+.listRoot::-webkit-scrollbar {
+  width: 5px;
+  background-color: #F5F5F5;
+}
+
+.listRoot::-webkit-scrollbar-thumb {
+  background-color: #F90;
+  background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, .2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .2) 50%, rgba(255, 255, 255, .2) 75%, transparent 75%, transparent)
+}
