--- a/src/layouts/simulation.css
+++ b/src/layouts/simulation.css
@@ -1,16 +1,30 @@
 div.tooltip {
-  position: absolute;
-  background-color: white;
-  max-width: 200px;
+  position: fixed;
+  top: 0;
+  right: 0;
+  background: #000711b8;
+  width: 300px;
   height: auto;
+  max-width: 200px;
   padding: 1px;
   border-style: solid;
   border-radius: 4px;
   border-width: 1px;
   box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.5);
-  pointer-events: none;
 }
 
+div.tooltip h5 {
+  color: rgba(255, 255, 255, 0.9);
+  font-size: 18px;
+}
+
+div.tooltip p {
+  color: rgba(255, 255, 255, 0.9);
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  font-size: 16px;
+}
+
+/*
 div.tooltip article {
   display: grid;
   height: 100%;
@@ -37,7 +51,7 @@ div.tooltip p[tools] {
   font-size: 12px;
   font-weight: 100;
   align-self: bottom;
-}
+} */
 
 .projectCircle {
   stroke: rgba(0, 0, 0, 0.9);
