--- a/src/layouts/simulation.css
+++ b/src/layouts/simulation.css
@@ -53,6 +53,11 @@ div.tooltip p[tools] {
   align-self: bottom;
 } */
 
+.circlesG {
+  width: 100%;
+  height: 100%;
+}
+
 .projectCircle {
   stroke: rgba(0, 0, 0, 0.9);
   cursor: pointer;
@@ -60,6 +65,10 @@ div.tooltip p[tools] {
 
 .projectCircle.glow {
   filter: url(#glow);
+}
+
+.projectCircle.float {
+  animation: floating 2s ease-in-out 0s infinite alternate;
 }
 
 .link {
@@ -76,5 +85,14 @@ div.tooltip p[tools] {
 @keyframes dash {
   to {
     stroke-dashoffset: 0;
+  }
+}
+
+@keyframes floating {
+  0% {
+    transform: translateY(0px);
+  }
+  100% {
+    transform: translateY(-5px);
   }
 }
